exports[`<AnnotationPanel /> snapshot tests matches snapshot when an annotation is saved for a line 1`] = `
<div
  style={
    Object {
      "padding": "3%",
    }
  }>
  <AnnotationPaginator
    getNextAnnotation={[Function]}
    getPreviousAnnotation={[Function]}
    hasNextAnnotation={false}
    hasPrevAnnotation={false} />
  <LineSnippet
    lineNumber={1}
    value="You don\'t know me!" />
  <AnnotationDisplay
    annotation="Wubba lubba dub dub!"
    closeAnnotation={[Function]}
    editAnnotation={[Function]} />
</div>
`;

exports[`<AnnotationPanel /> snapshot tests matches snapshot when no annotation is saved for a line 1`] = `
<div
  style={
    Object {
      "padding": "3%",
    }
  }>
  <LineSnippet
    lineNumber={1}
    value="You don\'t know me!" />
  <AnnotationEditor
    annotation=""
    closeAnnotation={[Function]}
    saveAnnotation={[Function]} />
</div>
`;
